[gd_scene load_steps=21 format=2]

[ext_resource path="res://entities/Cyclops.gd" type="Script" id=1]
[ext_resource path="res://images/enemy/cyclops_body.png" type="Texture" id=2]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_idle.png" type="Texture" id=3]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_attack_5.png" type="Texture" id=4]
[ext_resource path="res://images/enemy/cyclops_empty_arm.png" type="Texture" id=5]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_attack_4.png" type="Texture" id=6]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_attack_1.png" type="Texture" id=7]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_attack_2.png" type="Texture" id=8]
[ext_resource path="res://images/enemy/cyclops_weapon_arm_attack_3.png" type="Texture" id=9]
[ext_resource path="res://images/gui/health_back.png" type="Texture" id=10]
[ext_resource path="res://images/gui/health_progress.png" type="Texture" id=11]
[ext_resource path="res://images/charge_progress_back.png" type="Texture" id=12]
[ext_resource path="res://images/charge_progress_front.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 63 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 63.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 35, 63.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 400, 63.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 400, 63.5 )

[node name="Cyclops" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="WeaponArmSpriteBack" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -26, 0 )
frames = SubResource( 1 )
animation = "Attack"

[node name="BodySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="EmptyArmSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 2, 1 )
texture = ExtResource( 5 )

[node name="WeaponArmSpriteFront" type="AnimatedSprite" parent="."]
position = Vector2( -26, 0 )
frames = SubResource( 1 )
animation = "Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -30.0
margin_top = -78.0
margin_right = 30.0
margin_bottom = -70.0
value = 50.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="WeaponAreaLeft" type="Area2D" parent="."]
position = Vector2( -24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponAreaLeft"]
position = Vector2( -11, 2.5 )
shape = SubResource( 4 )

[node name="WeaponAreaRight" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponAreaRight"]
position = Vector2( 11, 2.5 )
shape = SubResource( 5 )

[node name="ViewAreaLeft" type="Area2D" parent="."]
position = Vector2( -24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewAreaLeft"]
position = Vector2( -376, 1.5 )
shape = SubResource( 6 )

[node name="ViewAreaRight" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewAreaRight"]
position = Vector2( 376, 2.5 )
shape = SubResource( 7 )

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="ChargeAttackCooldownTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="ChargeUpTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ChargeProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -51.0
margin_top = -144.0
margin_right = 51.0
margin_bottom = -93.0
max_value = 2.0
step = 0.01
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 13 )
fill_mode = 1

[connection signal="animation_finished" from="WeaponArmSpriteBack" to="." method="_on_WeaponArmSpriteBack_animation_finished"]
[connection signal="animation_finished" from="WeaponArmSpriteFront" to="." method="_on_WeaponArmSpriteFront_animation_finished"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="timeout" from="ChargeAttackCooldownTimer" to="." method="_on_ChargeAttackTimer_timeout"]
[connection signal="timeout" from="ChargeUpTime" to="." method="_on_ChargeUpTime_timeout"]
